# UQM-MegaMod

./: .gitignore  .gitmodules  AUTHORS  BUGS  CMakeLists.txt  COPYING  ChangeLog  Contributing  INSTALL  INSTALL.macos  INSTALL.macosx  INSTALL.mingw  INSTALL.msvc  INSTALL.pkgs  INSTALL.symbian  INSTALL.win32  Makefile.build  Makeinfo  Makeproject  MegaMod Changelog.txt  MegaMod Release Checklist.txt  NOTICE  README  README.md  WhatsNew  build.sh  build.vars.in  cmake-build.sh  cmake-clean.sh  config_unix.h  desktop.ini  helpers.cmake  makeinfo_analysis.txt  mingw.sh  msys2-depend.sh  src.rar  subst  uqm-indent  uqm.lsm
.github/workflows/: build.yml
app/composeApp/: build.gradle.kts
app/gradle/: libs.versions.toml
cmake/: config_android.h
content/: version
dev-lib/MINGW/include/: _G_config.h
dev-lib/MINGW/lib/: vorbis_d.lib
dev-lib/VS2008/lib/: ogg_d.lib  zdll.lib
dev-lib/VS2015/lib/: SDL_imaged.lib  ogg.lib  vorbisfile.lib
dev-lib/lib/: libpng16.lib  vorbis.lib  vorbisenc.lib  vorbisenc_d.lib  vorbisenc_static.lib  vorbisenc_static_d.lib  vorbisfile_d.lib  zdll.lib
dev-lib/lib/SDL-vs15/: SDL.lib  SDLmain.lib  SDLmaind.lib
doc/devel/: Hyperspace Coordinate Math [LOG_X-Y].txt  Hyperspace Coordinate Math [UNIVERSE_X-Y].txt  aniformat  battleinput  checklist  contentfiles  debug  dialogs  files  fntformat  fontres  generate  gfxlib  gfxres  gfxversions  glossary  historical  input  kerndatacfg  livecd  lua  luasyntax  meleeteams  musicres  orggenerate  pkgformat  planetrender  planetrotate  planettopo  plugins  queues  racestrings  resources  savefile  sc1  script  sfx  statefiles  strtab  threads  (+3 more)
doc/devel/netplay/: notes  protocol  states  todo
doc/fonts/: Fonts in use.txt
doc/release/: AUTHORS.txt  Basic UQM Manual.txt  CHANGELOG.txt  MegaMod README.txt  MegaMod-README.txt  README.md  UQM-Manual.txt
doc/users/: unixinstall  uqm.6
licenses/fonts/: Orbitron Black-license.txt  Razor Keen-license.txt  ReemKufi-OFL.txt  Times Old Attic-license.txt
src/: Makeinfo  config.h  config_android.h.in  config_unix.h.in  config_vc6.h  config_win.h.in  endian_uqm.h  options.c  options.h  port.c  port.h  types.h  uqm.c  uqmversion.h
src/abxadec/: Makefile  abxaud.c  abxaud.def  abxaud.h
src/darwin/: Makeinfo  SDLMain.h  SDLMain.m
src/getopt/: Makeinfo  getopt.c  getopt1.c
src/libs/: Makeinfo  alarm.h  async.h  callback.h  cdplib.h  compiler.h  declib.h  file.h  gfxlib.h  heap.h  inplib.h  list.h  log.h  mathlib.h  md5.h  memlib.h  misc.h  net.h  platform.h  reslib.h  scriptlib.h  sndlib.h  strlib.h  tasklib.h  threadlib.h  timelib.h  uio.h  uioutils.h  unicode.h  vidlib.h
src/libs/callback/: Makeinfo  alarm.c  alarm.h  async.c  async.h  callback.c  callback.h
src/libs/cdp/: Makeinfo  cdp.c  cdp.h  cdp_alli.h  cdp_iio.h  cdp_imem.h  cdp_isnd.h  cdp_ivid.h  cdpapi.c  cdpapi.h  cdpint.h  cdpmod.h  windl.c  windl.h
src/libs/decomp/: Makeinfo  lzdecode.c  lzencode.c  lzh.h  update.c
src/libs/file/: Makeinfo  dirs.c  files.c  filintrn.h  temp.c
src/libs/graphics/: Makeinfo  bbox.c  bbox.h  boxint.c  clipline.c  cmap.c  cmap.h  context.c  context.h  dcqueue.c  dcqueue.h  drawable.c  drawable.h  drawcmd.h  filegfx.c  font.c  font.h  frame.c  gfx_common.c  gfx_common.h  gfxintrn.h  gfxload.c  intersec.c  loaddisp.c  pixmap.c  prim.h  resgfx.c  tfb_draw.c  tfb_draw.h  tfb_prim.c  tfb_prim.h  widgets.c  widgets.h
src/libs/heap/: Makeinfo  heap.c  heap.h
src/libs/imgui/: Makeinfo  dcimgui.cpp  dcimgui.h  dcimgui_impl_sdlrenderer2.cpp  dcimgui_internal.cpp  dcimgui_internal.h  imgui_impl_sdl2.cpp  uqm_imgui.c  uqm_imgui.h  uqm_imgui_audio.c  uqm_imgui_cheats.c  uqm_imgui_controls.c  uqm_imgui_engine.c  uqm_imgui_gamestates.c  uqm_imgui_graphics.c  uqm_imgui_misc.c  uqm_imgui_status.c  uqm_imgui_str.c  uqm_imgui_tabs.c  uqm_imgui_visuals.c
src/libs/input/: Makeinfo  inpintrn.h  input_common.c  input_common.h
src/libs/list/: Makeinfo  list.c  list.h
src/libs/log/: Makeinfo  loginternal.h  msgbox.h  msgbox_macosx.m  msgbox_stub.c  msgbox_win.c  uqmlog.c  uqmlog.h
src/libs/lua/: Makeinfo  lua.c  luaconf.h
src/libs/luauqm/: Makeinfo  luauqm.c  luauqm.h  scriptres.c  scriptres.h
src/libs/math/: Makeinfo  mthintrn.h  random.c  random.h  random2.c  sqrt.c
src/libs/md5/: Makeinfo  README  md5.c  md5.h
src/libs/memory/: Makeinfo  w_memlib.c
src/libs/mikmod/: Makeinfo  README  drv_nos.c  load_it.c  load_mod.c  load_s3m.c  load_stm.c  load_xm.c  mdreg.c  mdriver.c  mikmod.h  mikmod_internals.h  mloader.c  mlreg.c  mlutil.c  mmalloc.c  mmio.c  mplayer.c  munitrk.c  mwav.c  sloader.c  virtch.c  virtch2.c  virtch_common.c
src/libs/network/: FILES  Makeinfo  bytesex.h  netport.c  netport.h  network.h  network_bsd.c  network_win.c  wspiapiwrap.c  wspiapiwrap.h
src/libs/resource/: Makeinfo  direct.c  filecntl.c  getres.c  index.h  loadres.c  propfile.c  propfile.h  resinit.c  resintrn.h  stringbank.c  stringbank.h
src/libs/sound/: Makeinfo  audiocore.c  audiocore.h  fileinst.c  music.c  (+10 more)
src/regex/: Makeinfo  regcomp.ci  regex.c  regex_internal.h  regexec.ci
src/res/: Makeinfo  UrQuanMasters.rc  megamod.desktop  net.sourceforge.uqm_mods.UQM-MegaMod.appdata.xml
src/symbian/: bld.inf  config.h  icons_scalable_dc.mk  uqm-armv5.pkg  uqm-gcce.pkg  uqm.cfg  uqm.mmp  uqm.rss  uqm_reg.rss  uqmapp.cpp
src/uqm/: .outfit.c.swp  Makeinfo  battle.c  battle.h  battlecontrols.c  battlecontrols.h  border.c  build.c  build.h  cleanup.c  clock.c  clock.h  cnctdlg.c  cnctdlg.h  coderes.h  collide.c  collide.h  colors.h  comm.c  comm.h  commanim.c  commanim.h  commglue.c  commglue.h  confirm.c  cons_res.c  cons_res.h  controls.h  corecode.h  credits.c  credits.h  cyborg.c  demo.c  demo.h  displist.c  displist.h  dummy.c  dummy.h  element.h  encount.c  (+99 more)
tools/dos-fnt/: Makefile  config.h  unfont.c  unfont.dsp  unfont.dsw  unfont3do.c  unfontall.sh  urquan.fon
tools/font-renderer/: README.md  font2png.py  readme.txt  ttf2png.py
tools/keys/: Makefile  keyjam.c
tools/star-sort/: starsort.py  tosort.txt
tools/uqmanimationtool/: LICENSE.txt  uqmanimationtool.conf
(+601 files in other folders)
